fix: estats adicionais